# glowraycast

./: .gitignore  README.md  goldlos.pro  mkdocs.yml  setup.cfg
docs/: gen_2d.md  index.md  overview.md
src/glow2d/: __init__.py  _glow2d.py  _utils.py
src/glowraycast/: __init__.py  _glowraycast.py
test/: jacobian_example.py  test.py
