[metadata]
name = glowraycast
version = attr:glowraycast.__version__
author = Sunip K. Mukherjee
description = NCAR GLOW model for 2D observation geometry
url = https://github.com/sunipkm/glowraycast
keywords =
  thermosphere
  ionosphere
classifiers =
  Development Status :: 1 - Development/alpha
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
zip_safe = False
install_requires =
  numpy >= 1.10
  geopy
  haversine
  scipy
  netcdf4
  pandas
  tqdm
  scipy
  scikit-image
  geomagindices @ git+https://github.com/sunipkm/geomagindices@53874386c2e127380c106390c8c8a08e586f2768
  ncarglow @ git+https://github.com/sunipkm/NCAR-GLOW@60c839fd1baea6b409c96d69ce5f4b30242051ef
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest >= 3.9
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
  seaborn
